# blog

./: .containerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .sops.yaml  CNAME  LICENSE  Makefile  README.md  conftest.py  hugo.toml  pyproject.toml  renovate.json  tags.yml
.forgejo/workflows/: ci.yml  renovate.yml
.github/workflows/: hugo.yml
blog/: cli.py  context_processors.py  enums.py  feeds.py  frontmatter.py  lint_content.py  linting.py  models.py  rendering.py  search.py  sitemaps.py  snapshots.py  sync.py  tags.py  views.py  wikilinks.py
blog/management/commands/: snapshot_posts.py  sync_content.py
blog/migrations/: 0001_initial.py  0002_alter_post_options_alter_tag_options_post_excerpt_and_more.py  0003_post_fts.py  0004_post_link_source_post_link_url_post_quote_source_and_more.py  0005_post_archived.py
config/: middleware.py  urls.py
config/settings/: base.py  dev.py  env.py  prod.py  test.py
content/: _index.md
content/posts/: my-first-post.md
content/test-yourself/: zettelkasten-reflection.md
deploy/: Containerfile  bootstrap-existing-box.md  cloud-init.yaml.tftpl  deploy.sh
deploy/caddy/: Caddyfile
deploy/litestream/: litestream.yml
deploy/observability/: README.md  alertmanager.yml  blackbox.yml  prometheus.yml  rules.yml
deploy/quadlets/: alertmanager.container  app.container  blackbox-exporter.container  blog.network  caddy.container  litestream.container  node-exporter.container  podman-exporter.container  prometheus.container
deploy/secrets/: .gitignore  README.md  secret.sops.yaml  secrets.sops.yaml  secrets.sops.yaml.example
deploy/systemd/: README.md  blog-deploy.service  blog-deploy.timer
deploy/tofu/: .gitignore  .terraform.lock.hcl  README.md  import.tf.example  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
docs/: runbook.md
docs/adr/: 0001-hsts-no-preload.md  0002-ty-checks-pure-domain.md  0003-pull-based-deploy-tailscale-only.md  0004-secrets-sops-age.md
layouts/: index.html
public/: 404.html  index.html  index.xml  sitemap.xml
public/ananke/css/: main.css.map
public/categories/: index.html  index.xml
public/posts/: index.html  index.xml
public/posts/my-first-post/: index.html
public/tags/: index.html  index.xml
scripts/: check-sops-encrypted.sh  golden.py
static/css/: main.css
templates/: archive.html  base.html  home.html  post_detail.html  search.html  tag_detail.html  tag_index.html
templates/partials/: link_header.html  pagination.html  quote_header.html  stream.html
tests/: test_smoke.py
tests/e2e/: test_home.py  test_preview.py
tests/fixtures/: lint_tags.yml
tests/fixtures/lint/: trailing-space.md  unknown-tag.md  unresolved-link.md
tests/golden/markdown/: code.html  code.md  footnotes.html  footnotes.md
tests/golden/posts/: essay.html  essay.md  link.html  link.md  note.html  note.md  quote.html  quote.md  til.html  til.md
tests/integration/: test_archive.py  test_base_template.py  test_feed.py  test_home_page.py  test_lint_content.py  test_models.py  test_post_detail.py  test_post_detail_golden.py  test_search.py  test_search_page.py  test_sitemap.py  test_snapshots.py  test_static_pipeline.py  test_sync.py  test_tags.py
tests/unit/: test_cli.py  test_enums.py  test_env.py  test_frontmatter.py  test_linting.py  test_prod_settings.py  test_rendering.py  test_rendering_golden.py  test_static_settings.py  test_tag_vocabulary.py  test_wikilinks.py
