[project]
name = "blog"
version = "0.0.0"
description = "A personal linkblog and hub, built on Django and SQLite."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Jason Birchall", email = "mail@jasonbirchall.dev" }]
dependencies = [
    "django>=5.2,<5.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "whitenoise>=6.12.0",
]

# This is an application, not a distributable package. uv manages the
# environment from the lockfile; there is no build backend and nothing to
# install into site-packages.
[tool.uv]
package = false

[dependency-groups]
dev = [
  "pip-audit>=2.10.0",
  "pre-commit>=4.6.0",
  "pytest>=9.0.3",
  "pytest-django>=4.12.0",
  "ruff>=0.15.16",
  "ty>=0.0.44",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Django migrations are generated; don't lint them by our hand-written rules.
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "DJ",  # flake8-django
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
# Django settings modules compose via star-import by convention.
"config/settings/*" = ["F403", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["blog", "config"]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.environment]
python-version = "3.12"

# ty has no Django ORM support: managers (.objects), related managers (.add/
# .all), and field descriptors are injected dynamically and read as unresolved.
# The ORM-exercising tests run for real (pytest catches genuine typos), so
# suppress just this rule there rather than littering ignores. The pure domain
# (blog/enums.py, blog/tags.py) stays fully type-checked.
[[tool.ty.overrides]]
include = ["tests/integration/**"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
  # WhiteNoise warns when STATIC_ROOT is unpopulated; the test env never runs
  # collectstatic first, and the collectstatic spec covers that path explicitly.
  "ignore:No directory at:UserWarning",
]
DJANGO_SETTINGS_MODULE = "config.settings.test"
# BDD style discovery, keeping the conventional names too.
python_classes = ["Test*", "Describe*"]
python_functions = ["test_*", "it_*"]
